--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 							<section class="tg-sectionspace tg-haslayout">
 								<div class="tg-shortcode tg-welcomeandgreeting tg-welcomeandgreeting-v2">
-									<figure><img style="object-fit: cover; width: 100%; height: 30vh;" src="images/glance/img/vc.jpg" alt="image description"></figure>
+									<figure><img style="object-fit: cover; width: 100%; height: 30vh;" src="images/glance/vc.jpg" alt="image description"></figure>
 									<div class="tg-shortcodetextbox">
 										<h2>Welcome &amp; Greetings!</h2>
 										<div class="tg-description">
@@ -315,7 +315,7 @@
 												<article class="tg-themepost tg-newspost">
 													<figure class="tg-featuredimg">
 														<a href="javascript:void(0);">
-															<img style="object-fit: contain; width: 100%; height: 30vh;" src="images/glance/img/vc.jpg"
+															<img style="object-fit: contain; width: 100%; height: 30vh;" src="images/glance/vc.jpg"
 																alt="image description">
 														</a>
 													</figure>
@@ -343,7 +343,7 @@
 												<article class="tg-themepost tg-newspost">
 													<figure class="tg-featuredimg">
 														<a href="javascript:void(0);">
-															<img style="object-fit: cover; width: 100%; height: 30vh;" src="images/glance/img/approval.jpg"
+															<img style="object-fit: cover; width: 100%; height: 30vh;" src="images/glance/approval.jpg"
 																alt="image description">
 														</a>
 													</figure>
@@ -370,7 +370,7 @@
 												<article class="tg-themepost tg-newspost">
 													<figure class="tg-featuredimg">
 														<a href="javascript:void(0);">
-															<img style="object-fit: contain; width: 100%;" src="images/glance/img/inspect.jpg"
+															<img style="object-fit: contain; width: 100%;" src="images/glance/inspect.jpg"
 																alt="image description">
 														</a>
 													</figure>
@@ -397,7 +397,7 @@
 												<article class="tg-themepost tg-newspost">
 													<figure class="tg-featuredimg">
 														<a href="javascript:void(0);">
-															<img style="object-fit: cover; width: 100%; height: 30vh;" src="images/glance/img/faculty.jpg"
+															<img style="object-fit: cover; width: 100%; height: 30vh;" src="images/glance/faculty.jpg"
 																alt="image description">
 														</a>
 													</figure>
@@ -436,50 +436,50 @@
 												<ul class="tg-gallery">
 													<li>
 														<figure>
-															<a class="tg-btnview" href="images/glance/img/plane.png"
+															<a class="tg-btnview" href="images/glance/plane.png"
 																data-rel="prettyPhoto[glance]"><i
 																	class="icon-magnifier"></i></a>
-															<img src="images/glance/img/plane.png" alt="image description">
+															<img src="images/glance/plane.png" alt="image description">
 														</figure>
 													</li>
 													<li>
 														<figure>
-															<a class="tg-btnview" href="images/glance/img/img1.jpg"
+															<a class="tg-btnview" href="images/glance/img1.jpg"
 																data-rel="prettyPhoto[glance]"><i
 																	class="icon-magnifier"></i></a>
-															<img src="images/glance/img/img1.jpg" alt="image description">
+															<img src="images/glance/img1.jpg" alt="image description">
 														</figure>
 													</li>
 													<li>
 														<figure>
-															<a class="tg-btnview" href="images/glance/img/usncc-engineering.jpg"
+															<a class="tg-btnview" href="images/glance/usncc-engineering.jpg"
 																data-rel="prettyPhoto[glance]"><i
 																	class="icon-magnifier"></i></a>
-															<img src="images/glance/img/usncc-engineering.jpg" alt="image description">
+															<img src="images/glance/usncc-engineering.jpg" alt="image description">
 														</figure>
 													</li>
 													<li>
 														<figure>
-															<a class="tg-btnview" href="images/glance/img/download.jpg"
+															<a class="tg-btnview" href="images/glance/download.jpg"
 																data-rel="prettyPhoto[glance]"><i
 																	class="icon-magnifier"></i></a>
-															<img src="images/glance/img/download.jpg" alt="image description">
+															<img src="images/glance/download.jpg" alt="image description">
 														</figure>
 													</li>
 													<li>
 														<figure>
-															<a class="tg-btnview" href="images/glance/img/world.png"
+															<a class="tg-btnview" href="images/glance/world.png"
 																data-rel="prettyPhoto[glance]"><i
 																	class="icon-magnifier"></i></a>
-															<img src="images/glance/img/world.png" alt="image description">
+															<img src="images/glance/world.png" alt="image description">
 														</figure>
 													</li>
 													<li>
 														<figure>
-															<a class="tg-btnview" href="images/glance/img/003-1024x964.webp"
+															<a class="tg-btnview" href="images/glance/003-1024x964.webp"
 																data-rel="prettyPhoto[glance]"><i
 																	class="icon-magnifier"></i></a>
-															<img src="images/glance/img/003-1024x964.webp" alt="image description">
+															<img src="images/glance/003-1024x964.webp" alt="image description">
 														</figure>
 													</li>
 												</ul>
